--- a/style.css
+++ b/style.css
@@ -43,17 +43,19 @@ body, html {
 
 /* ゲーム画面 */
 #game-screen .character {
-    z-index: 2;
-    width: 150px;
+    z-index: 1; /* キャラクターのレイヤーをボタンの下に変更 */
+    width: 500px; /* キャラクターの幅を大きくする */
     position: relative;
 }
 
+/* ボタンのレイヤーを上に設定 */
 .button-container {
     position: absolute;
     bottom: 20px;
     display: flex;
     justify-content: space-around;
     width: 80%;
+    z-index: 3; /* ボタンのレイヤーを上に設定 */
 }
 
 button {
