--- a/style.css
+++ b/style.css
@@ -57,12 +57,12 @@ body, html {
     width: 80%;
     z-index: 3; /* ボタンのレイヤーを上に設定 */
 }
-
+/* ボタンのスタイル */
 button {
-    width: 60px; /* ボタンの幅を60pxに変更 */
-    height: 60px; /* ボタンの高さも60pxに変更 */
+    width: 60px; /* ボタンの幅 */
+    height: 60px; /* ボタンの高さ */
     border-radius: 50%; /* 丸くする */
-    font-size: 12px; /* フォントサイズを少し小さくする */
+    font-size: 10px; /* 文字サイズを更に小さく */
     cursor: pointer;
     display: flex;
     justify-content: center;
