--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
     height: 100%;
     background-color: white;
     z-index: 9999; /* 他の要素より上に表示 */
-    opacity: 1;
+    opacity: 0; /* 最初は非表示 */
     transition: opacity 1s ease; /* フェードアウトの効果 */
 }
 
