--- a/style.css
+++ b/style.css
@@ -56,13 +56,12 @@ body, html {
     justify-content: space-around;
     width: 80%;
     z-index: 3; /* ボタンのレイヤーを上に設定 */
-}
-/* ボタンのスタイル */
+}/* ボタンのスタイル */
 button {
     width: 60px; /* ボタンの幅 */
     height: 60px; /* ボタンの高さ */
     border-radius: 50%; /* 丸くする */
-    font-size: 7px; /* 文字サイズを更に小さく */
+    font-size: 10px; /* 文字サイズを更に小さく */
     cursor: pointer;
     display: flex;
     justify-content: center;
@@ -75,6 +74,10 @@ button {
 
 button:hover {
     transform: scale(1.1); /* ボタンにホバー時のアニメーションを追加 */
+}
+
+button:active {
+    transform: scale(0.9); /* 押したときにボタンが少し小さくなるアニメーション */
 }
 
 button:focus {
