--- a/style.css
+++ b/style.css
@@ -12,7 +12,6 @@ body, html {
     position: relative; /* スクロールを防ぐために親要素に相対位置を設定 */
 }
 
-/* 画面全体の構造 */
 .screen {
     position: absolute;
     width: 100%;
@@ -21,6 +20,22 @@ body, html {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+}
+
+/* 白いオーバーレイ */
+.fade-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    opacity: 0;
+    transition: opacity 1s ease; /* フェード効果 */
+}
+
+.hidden {
+    display: none;
 }
 
 /* 背景 */
