--- a/style.css
+++ b/style.css
@@ -182,3 +182,14 @@ button:focus {
 .hidden {
     display: none;
 }
+
+/* 半透明の横線 */
+.horizontal-line {
+    position: absolute;
+    bottom: 0px; /* ボタンの上に配置 */
+    left: 0;
+    width: 100%;
+    height: 100px;
+    background-color: rgba(255, 255, 255, 0.5); /* 半透明の白 */
+    z-index: 2; /* ボタンより下に配置 */
+}
