--- a/style.css
+++ b/style.css
@@ -58,6 +58,7 @@ body, html {
 #game-screen .character {
     z-index: 1; /* キャラクターのレイヤーをボタンの下に変更 */
     width: 500px; /* キャラクターの幅を大きくする */
+    top:70px;
     position: relative;
 }
 
