--- a/style.css
+++ b/style.css
@@ -156,6 +156,9 @@ button:focus {
     align-items: center;
     flex-direction: column;
     z-index: 2;
+    max-width: 80%; /* 吹き出しの最大幅を設定 */
+    word-wrap: break-word;  /* 文字がはみ出したときに自動的に改行 */
+    white-space: pre-wrap; /* 改行を適切に扱う */
 }
 
 .bubble-img {
